# crm-go-vue-shadcn

./: .env.local.example  .gitignore  README.md  crm-go-zhaozhaoying.compat.sql  go.sum  main.go  电销录音.txt
.omc/: project-memory.json
.omc/sessions/: 10a10043-634d-4486-9383-c7d12946a474.json  3390f983-b29e-4b42-b367-3f8d27be9946.json  41f41fb0-61cd-4fa0-9476-b0b50517eeaa.json  7c315929-028b-49b6-a3c7-fa908074922a.json  85948235-22e0-4f98-b91f-e38160fc8b83.json  b0e64fdd-5cb3-4344-8e5c-5c04731e1285.json  ccc76dcb-2b2f-4c2a-8065-24ab7f31b1b3.json
.omc/state/: agent-replay-10a10043-634d-4486-9383-c7d12946a474.jsonl  agent-replay-b0e64fdd-5cb3-4344-8e5c-5c04731e1285.jsonl  subagent-tracking.json
apps/attendance-h5/: App.vue  manifest.json  package-lock.json
apps/mihua-token-service/: README.md  pyproject.toml
apps/mihua-token-service/src/mihua_token_fetcher/: cli.py  helpers.py
backend/: .air.toml  README.md  go.mod  go.sum  main.go  production.env.sample
backend/docs/: docs.go  google-search-setup.md  swagger.json  (+1 more)
check-in/: App.vue  index.html  main.js  package-lock.json  package.json  pages.json
docs/: RESTRUCTURE_PROPOSAL.md  backend.md  docs.go  swagger.json  swagger.yaml
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
mihua-token-fetcher/: .gitignore  README.md
scripts/: build-cn.sh  deploy-overseas.sh  deploy.sh  fix-mysql-767-indexes.sh  package-release.sh
web/: .env.example  .npmrc  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml
(+346 files in other folders)
