[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mihua-token-fetcher"
version = "0.1.0"
description = "通过浏览器自动抓取米话 token 的小工具"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "ddddocr>=1.5.6,<2",
  "playwright>=1.54,<2",
  "PyMySQL>=1.1,<2",
]

[project.scripts]
mihua-token-fetcher = "mihua_token_fetcher.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
